--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -10,14 +10,13 @@
         android:id="@+id/appbar_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_table"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_weight="1"
-            android:background="?attr/colorPrimary"
+            android:layout_height="?attr/actionBarSize"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
