--- a/app/src/main/res/menu/menu_started.xml
+++ b/app/src/main/res/menu/menu_started.xml
@@ -3,14 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.igor.restaurantmobile.StartedActivity">
     <item
-        android:id="@+id/action_exit_start"
-        android:icon="@drawable/exit_to_app_white_48dp"
-        android:title="Exit"
+        android:id="@+id/action_signal_check"
+        android:icon="@drawable/signal_wi_fi_48"
+        android:title="Signal"
         app:showAsAction="always" />
+
     <item
         android:id="@+id/action_setting_start"
         android:icon="@android:drawable/ic_menu_manage"
         android:title="@string/action_settings"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_exit_start"
+        android:icon="@drawable/exit_to_app_white_48dp"
+        android:title="Exit"
+        app:showAsAction="never" />
 
 </menu>
