--- a/app/src/main/res/drawable/item_background_selector.xml
+++ b/app/src/main/res/drawable/item_background_selector.xml
@@ -9,4 +9,7 @@
     <item android:state_pressed="false"
         android:drawable="@drawable/round_edittext_true">
     </item>
+    <item android:state_activated="false"
+        android:drawable="@drawable/round_edittext_true">
+    </item>
 </selector>
