--- a/app/src/main/res/drawable/side_tree_theme_background_main.xml
+++ b/app/src/main/res/drawable/side_tree_theme_background_main.xml
@@ -1,8 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:endColor="#1f4037"
-        android:startColor="#99f2c8"
+        android:angle="180"
+        android:endColor="#093028"
+        android:startColor="#237A57"
         android:type="linear" />
 </shape>
