--- a/app/src/main/res/drawable/side_tree_theme_background_table.xml
+++ b/app/src/main/res/drawable/side_tree_theme_background_table.xml
@@ -1,8 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#FFAB4A"/>
+    android:shape="rectangle">
+    <gradient
+        android:angle="180"
+        android:endColor="#F7971E"
+        android:startColor="#FFD200"
+        android:type="linear" />
     <stroke
         android:width="1dp"
         android:color="#000000" />
