--- a/app/src/main/res/layout/activity_edit_line.xml
+++ b/app/src/main/res/layout/activity_edit_line.xml
@@ -10,14 +10,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/side_tree_theme_background_main"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_edit"
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="?attr/actionBarSize"
             android:layout_weight="1"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -27,8 +27,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:textColor="@android:color/black"
-        android:textSize="30sp" />
+        android:textSize="36sp" />
 
     <TextView
         android:id="@+id/priceasl_line"
@@ -49,7 +50,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            app:srcCompat="@android:drawable/button_onoff_indicator_on" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/keyboard_arrow_down_black_48dp" />
 
         <EditText
             android:id="@+id/edt_cnt_line"
@@ -68,7 +70,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            app:srcCompat="@android:drawable/ic_input_add" />
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/keyboard_arrow_up_black_48dp" />
     </LinearLayout>
 
 
@@ -128,9 +131,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/second"
+            android:layout_toLeftOf="@+id/second"
             android:layout_weight="1"
-            android:text="Cancel"
-            android:layout_toLeftOf="@+id/second" />
+            android:background="@drawable/item_background_selector_button"
+            android:text=" Cancel "
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/second"
@@ -148,8 +155,10 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
+            android:background="@drawable/item_background_selector_button"
             android:text="@string/save_setting"
-            android:textSize="18sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp" />
         <!--<TextView-->
             <!--android:id="@+id/imageButton_save_edit"-->
             <!--android:layout_width="wrap_content"-->
