--- a/app/src/main/res/layout/bill_show.xml
+++ b/app/src/main/res/layout/bill_show.xml
@@ -14,7 +14,7 @@
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@color/counts"
-        android:textSize="16sp"
+        android:textSize="14sp"
         android:textStyle="bold"
         app:fontFamily="monospace" />
 
@@ -26,6 +26,8 @@
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="@android:color/black"
         android:textSize="14sp"
-        app:fontFamily="monospace" />
+        android:paddingLeft="4dp"
+        app:fontFamily="monospace"
+        android:paddingStart="4dp" />
 
     </LinearLayout>
