--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -28,7 +28,6 @@
             android:numColumns="auto_fit"
             android:stretchMode="columnWidth"
             android:verticalSpacing="10dp">
-
         </GridView>
     </LinearLayout>
 
@@ -41,7 +40,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
+            android:background="@drawable/side_tree_theme_background_main"
             android:text="@string/list_bil"
             android:textAlignment="center"
             android:textColor="@android:color/background_light"
