--- a/app/src/main/res/layout/lis_bills.xml
+++ b/app/src/main/res/layout/lis_bills.xml
@@ -18,8 +18,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Masa:"
             android:paddingLeft="3dp"
+            android:text="Masa:"
+            android:textColor="@color/white"
             android:textSize="15sp" />
 
         <TextView
@@ -30,8 +31,8 @@
             android:gravity="center_vertical"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
+            android:textColor="@color/white"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:fontFamily="monospace" />
 
@@ -49,9 +50,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:text="Cont:"
             android:paddingLeft="6dp"
             android:paddingBottom="6dp"
+            android:text="Cont:"
+            android:textColor="@color/white"
             android:textSize="15sp" />
 
         <TextView
@@ -62,8 +64,9 @@
             android:gravity="center_vertical"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceListItemSmall"
-            android:textColor="@android:color/black"
+            android:textColor="@color/white"
             android:textSize="18sp"
+            android:textStyle="italic"
             app:fontFamily="monospace" />
     </LinearLayout>
 
