--- a/app/src/main/res/layout/item_new_order_line.xml
+++ b/app/src/main/res/layout/item_new_order_line.xml
@@ -23,10 +23,11 @@
 
     <TextView
         android:id="@+id/textCount"
-        android:layout_width="55dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:minWidth="@dimen/_30sdp"
+        android:minWidth="@dimen/_25sdp"
+        android:maxWidth="@dimen/_45sdp"
         android:text="count"
         android:textColor="@color/counts"
         android:textSize="@dimen/_12ssp"
@@ -37,10 +38,11 @@
 
     <TextView
         android:id="@+id/textPrice"
-        android:layout_width="55dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="right"
-        android:minWidth="@dimen/_30sdp"
+        android:minWidth="@dimen/_25sdp"
+        android:maxWidth="@dimen/_45sdp"
         android:text="price"
         android:textColor="@android:color/holo_red_light"
         android:textSize="@dimen/_12ssp"
